@@ -637,6 +637,14 @@
                 </md>.  By <xref ref="theorem-SMEZV" acro="SMEZV" autoname="yes"/>, either <m>\lambda-\rho=0</m> or <m>\vect{x}=\zerovector</m>, which are both contradictions.</p>
             </solution>
         </exercise>
+        <exercise number="T21" xml:id="exercise-PEE-T21">
+            <statement>
+                <p>Suppose that <m>A</m> is a square matrix of size <m>n</m> with an eigenvalue <m>\lambda</m>.  For <m>\lambda\in\complexes</m>, prove that <m>\lambda+\alpha</m> is an eigenvalue of the matrix <m>A+\alpha I_n</m>.<ol>
+                    <li>Construct a proof that begins by employing a vector <m>\vect{x}</m> that is an eigenvector of <m>A</m> for <m>\lambda</m>.</li>
+                    <li>Construct a proof that establishes that <m>\lambda+\alpha</m> is a root of the characteristic polynomial of <m>A+\alpha I_n</m>.</li>
+                </ol></p>
+            </statement>
+        </exercise>
         <exercise number="T22" xml:id="exercise-PEE-T22">
             <statement>
                 <p>Suppose that <m>U</m> is a unitary matrix with eigenvalue <m>\lambda</m>.  Prove that <m>\lambda</m> has modulus 1, <ie/> <m>\modulus{\lambda}=1</m>.  This says that all of the eigenvalues of a unitary matrix lie on the unit circle of the complex plane.</p>
