@@ -1,5 +1,6 @@
 v X.XX
 ~~~~~~~~~~~~~~~~
+New: Exercise PEE.T21, eigenvalue proof two ways
 Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
 Edit: Theorem EDYES, substantially shorten proof
 Edit: Exercise IVLT.T15, streamline solution
